[package]
name = "m3u8_downloader"
version = "0.1.4"
edition = "2021"

[dependencies]
rayon = "1.7"
regex = "1.10"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
soup = "0.3"
serde_json = "1.0"
csv = "1.2"
scraper = "0.19"
url = "2.5.8"
indicatif = "0.18.6"
colored = "3.1.1"
